added final calculations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <img src="img/exchange-rate.png" alt="" class="money-img" />
   <h1>Exchange Rate Calculator</h1>
-  <p>Choose the currency and the amounts to get the exchange rate</p>
+  <p>Choose the currencies and enter the amounts to get the exchange rate.</p>
 
   <div class="container">
     <div class="currency">
@@ -135,7 +135,7 @@
         <option value="VND">VND</option>
         <option value="ZAR">ZAR</option>
       </select>
-      <input type="number" id="amount-two" placeholder="0" />
+      <input type="text" id="amount-two" class='no-arrows' placeholder="0" />
     </div>
   </div>
 
